--- a/docs/rapport.tex
+++ b/docs/rapport.tex
@@ -137,11 +137,23 @@ from a perceptron, also known as \textit{activation}, is computed using
 the formula:
 
 % Make pretty math notation here plz Marc
-act(sum(xj*wj,i))
+\begin{equation*}
+  a_i = act(\sum_j x_j*w_{j,i})
+\end{equation*}
 
 where x is the input, w is the weight and act is the activation function
 which is the sigmoid function:
-sigmoid(x) = 1/(1+e^(-x))
+
+\begin{equation*}
+sigmoid(x) = 1/(1+e^{-x})
+\end{equation*}
+
+\begin{align*}
+  &e_i = y_i - a_i\\
+  &\nabla w_{j,i} = \alpha e_ix_j\\
+  &w_{j,i} \leftarrow w_{j,i} + \nabla w_{j,i}
+\end{align*}
+  
 
 \newpage
 % This may not be the prettiest solution, but it's the one you deserve Linus
