--- a/docs/rapport.tex
+++ b/docs/rapport.tex
@@ -131,7 +131,7 @@ function (more on that later) towards either the left or the right. I.e.
 to make the output more extreme so that it will produce a more distinct
 answer.
 
-Training of the network occurs in the \textit{Tutor class} where the provided
+Training in the network occurs in the \textit{Tutor class} where the provided
 set of training images is repetedly shown for each perceptron. The output
 from a perceptron, also known as \textit{activation}, is computed using
 the formula:
@@ -141,19 +141,27 @@ the formula:
   a_i = act(\sum_j x_j*w_{j,i})
 \end{equation*}
 
-where x is the input, w is the weight and act is the activation function
+where x is the input, w is the weight and act is the activation function,
 which is the sigmoid function:
 
 \begin{equation*}
 sigmoid(x) = 1/(1+e^{-x})
 \end{equation*}
 
+
+The difference between the expected output and the actual output is the
+error \textit{e}. The error e is then multiplied with the learning rate \alpha
+and the pixel matrix to produce the gradient \textit{\nabla W}. This
+gradient is then added to every weight in the internal weight matrix for each
+perceptron. This course of events can be described using the bellow formulas:
+
 \begin{align*}
   &e_i = y_i - a_i\\
   &\nabla w_{j,i} = \alpha e_ix_j\\
   &w_{j,i} \leftarrow w_{j,i} + \nabla w_{j,i}
 \end{align*}
-  
+
+
 
 \newpage
 % This may not be the prettiest solution, but it's the one you deserve Linus
