--- a/docs/rapport.tex
+++ b/docs/rapport.tex
@@ -155,7 +155,7 @@ where x is the input, w is the weight and act is the activation function,
 which is the sigmoid function:
 
 \begin{equation*}
-sigmoid(x) = 1/(1+e^{-x})
+	sigmoid(x) = \frac{1}{1+e^{-x}}
 \end{equation*}
 
 
